hot fix, add width to event-content
or if content is too long, it will wrap content div to the next line
under avatar

--- a/public/css/my.css
+++ b/public/css/my.css
@@ -300,6 +300,7 @@ div.event-avatar img {
 
 div.event-content {
   float: left;
+  width: 85%;
 }
 div.event-content h5 {
   margin-top: 0;
